AI-JADEDEVS4/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ARCHIVE_Total_Contract_Amount__c</fullName>
        <inlineHelpText>Total contract amount imported from archived Opportunities.</inlineHelpText>
        <label>Total Contract Amount (Archive)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <label>Configuration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID( AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Report_Filter__c</fullName>
        <formula>Account.Report_Filter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Need to delete this field  after cleaning up the  configurations</inlineHelpText>
        <label>Account Report Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_18_Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Contract 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_Quote__c</fullName>
        <formula>SBQQ__Quote__r.Display_End_Date__c</formula>
        <label>Contract End Date (Quote)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <formula>SBQQ__Opportunity__r.SBQQ__Contracted__c</formula>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForceDeferred__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForceDeferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Unique key used to migrate archive of Opportunities to Contracts (DaVinci).</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(SBQQ__Opportunity__r.Type)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Quote__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Primary__c</formula>
        <label>Primary Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Cap__c</fullName>
        <formula>SBQQ__Quote__r.Renewal_Cap__c</formula>
        <label>Renewal Cap %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;),EndDate &gt; TODAY()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Check to carry over contact roles from original to renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Check to carry over partners from original to renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Designates this contract as the master contract for this account. Upon renewal all contracts will be rolled into this contract.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>ID of the Price Book used from the original Opportunity.</description>
        <formula>SBQQ__Opportunity__r.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of the price book used from the original opportunity.</inlineHelpText>
        <label>Opportunity Pricebook Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote that generated this contract.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different than the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Default stage of renewal opportunity generated from this contract.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>User who should own the renewal opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>ID of price book to use when renewing this contract.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Term of the renewal, which defaults to the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAdditionalDiscountAmount__c</fullName>
        <label>Total Additional Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCustomerPrice__c</fullName>
        <label>Total Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalListPrice__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMarkupAmount__c</fullName>
        <label>Total Markup Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalNetPrice__c</fullName>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOriginalUnitCost__c</fullName>
        <label>Total Original Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRegularPrice__c</fullName>
        <label>Total Regular Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRenewalPrice__c</fullName>
        <description>Annual renewalprice without quantity</description>
        <inlineHelpText>Annual Renewal Price without quantity</inlineHelpText>
        <label>Annual Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSegmentUpliftAmount__c</fullName>
        <label>Total Segment Uplift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSpecialPrice__c</fullName>
        <label>Total Special Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalUnitCost__c</fullName>
        <label>Total Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Renewal_Price__c</fullName>
        <description>This field is roll up of total renewal price that multiplies by quantity of subscriptions</description>
        <inlineHelpText>Total renewal price includes quantity</inlineHelpText>
        <label>Total Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>